[gd_scene load_steps=9 format=3 uid="uid://3vhu2q325nlc"]

[ext_resource type="Script" path="res://shop.gd" id="1_pxlnj"]
[ext_resource type="Texture2D" uid="uid://1a2m1363c717" path="res://FAMCS.TD_design-main/35 shop.png" id="2_1ekqv"]
[ext_resource type="Texture2D" uid="uid://bfj25new42fu2" path="res://Towers/wooden_tower/7.2.png" id="2_cceu7"]
[ext_resource type="Texture2D" uid="uid://ibqvme28raam" path="res://Towers/eiffel_tower/9.b.png" id="3_4fvsr"]
[ext_resource type="FontFile" uid="uid://bgrcc2vqd6riw" path="res://GaMaamli-Regular.ttf" id="4_ldpf8"]
[ext_resource type="Texture2D" uid="uid://b37oa4pvrf8io" path="res://Towers/stone_tower/8.1.png" id="4_udq4v"]
[ext_resource type="Texture2D" uid="uid://d2h8cnj25ric1" path="res://Towers/jade_tower/10.1.png" id="5_8a3tq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c11yk"]
size = Vector2(96, 99)

[node name="shop" type="Node2D"]
script = ExtResource("1_pxlnj")
balance = 50

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2210, 765)
scale = Vector2(0.98, 1.528)
texture = ExtResource("2_1ekqv")

[node name="Control" type="Control" parent="Sprite2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -47.3379
offset_top = -47.5733
offset_right = 15.6621
offset_bottom = 48.4267

[node name="GridContainer" type="GridContainer" parent="Sprite2D/Control"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 96.0

[node name="Sprite2D5" type="Sprite2D" parent="Sprite2D/Control/GridContainer"]
position = Vector2(-239.397, -60.411)
scale = Vector2(2.04056, 1.268)
texture = ExtResource("2_cceu7")
offset = Vector2(65, 48)

[node name="wooden_touch_screen" type="TouchScreenButton" parent="Sprite2D/Control/GridContainer/Sprite2D5"]
position = Vector2(64.622, 46.6667)
shape = SubResource("RectangleShape2D_c11yk")

[node name="Label" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D5"]
offset_left = 27.5034
offset_top = -22.1936
offset_right = 132.503
offset_bottom = 0.806492
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 12
text = "wooden tower"

[node name="Label2" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D5"]
offset_left = 46.0
offset_top = 102.0
offset_right = 85.0
offset_bottom = 126.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 25
text = "10$"

[node name="Sprite2D2" type="Sprite2D" parent="Sprite2D/Control/GridContainer"]
position = Vector2(66.7255, -63.6833)
scale = Vector2(2.20124, 1.3089)
texture = ExtResource("3_4fvsr")
offset = Vector2(54, 48)

[node name="eifel_touch_screen" type="TouchScreenButton" parent="Sprite2D/Control/GridContainer/Sprite2D2"]
position = Vector2(52.5092, 46.6666)
shape = SubResource("RectangleShape2D_c11yk")

[node name="Label" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D2"]
offset_left = 29.0
offset_top = -21.0
offset_right = 89.0
offset_bottom = -5.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 12
text = "eifel tower"

[node name="Label2" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D2"]
offset_left = 36.6213
offset_top = 101.5
offset_right = 75.6213
offset_bottom = 133.5
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 25
text = "30$"

[node name="Sprite2D3" type="Sprite2D" parent="Sprite2D/Control/GridContainer"]
position = Vector2(-209.695, 171.264)
scale = Vector2(2.24794, 1.39071)
texture = ExtResource("4_udq4v")
offset = Vector2(50, 48)

[node name="stone_touch_screen" type="TouchScreenButton" parent="Sprite2D/Control/GridContainer/Sprite2D3"]
position = Vector2(51.2045, 48.6667)
shape = SubResource("RectangleShape2D_c11yk")

[node name="Label" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D3"]
offset_left = 19.0163
offset_top = -18.8235
offset_right = 94.0163
offset_bottom = -1.82353
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 12
text = "stone tower"

[node name="Label2" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D3"]
offset_left = 29.4565
offset_top = 101.177
offset_right = 68.4565
offset_bottom = 133.177
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 25
text = "20$"

[node name="Sprite2D4" type="Sprite2D" parent="Sprite2D/Control/GridContainer"]
position = Vector2(67.7459, 171.919)
scale = Vector2(2.23199, 1.39071)
texture = ExtResource("5_8a3tq")
offset = Vector2(50, 48)

[node name="jade_touch_screen" type="TouchScreenButton" parent="Sprite2D/Control/GridContainer/Sprite2D4"]
position = Vector2(52.9614, 48.692)
shape = SubResource("RectangleShape2D_c11yk")

[node name="Label" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D4"]
offset_left = 22.8587
offset_top = -19.7647
offset_right = 86.8587
offset_bottom = -2.7647
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 12
text = "jade tower"

[node name="Label2" type="Label" parent="Sprite2D/Control/GridContainer/Sprite2D4"]
offset_left = 38.8599
offset_top = 103.058
offset_right = 77.8599
offset_bottom = 135.058
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 25
text = "50$"

[node name="Balance_label" type="Label" parent="Sprite2D/Control"]
layout_mode = 0
offset_left = -73.0702
offset_top = -144.181
offset_right = 152.93
offset_bottom = -92.1806
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_ldpf8")
theme_override_font_sizes/font_size = 41
text = "Balance: 0"

[connection signal="pressed" from="Sprite2D/Control/GridContainer/Sprite2D5/wooden_touch_screen" to="." method="_on_wooden_touch_screen_pressed"]
[connection signal="pressed" from="Sprite2D/Control/GridContainer/Sprite2D2/eifel_touch_screen" to="." method="_on_eifel_touch_screen_pressed"]
[connection signal="pressed" from="Sprite2D/Control/GridContainer/Sprite2D3/stone_touch_screen" to="." method="_on_stone_touch_screen_pressed"]
[connection signal="pressed" from="Sprite2D/Control/GridContainer/Sprite2D4/jade_touch_screen" to="." method="_on_jade_touch_screen_pressed"]
